# Prism

./: .gitignore  LICENSE  README.md
Prism/: BrowserState.swift  Info.plist  Prism.entitlements  PrismApp.swift
Prism.xcodeproj/: project.pbxproj
Prism/Models/: AutocompleteService.swift  Bookmark.swift  BrowserSettings.swift  BrowserTab.swift  FaviconCache.swift  FilterList.swift  FilterListManager.swift  HistoryStore.swift  QuickLink.swift  QuickLinkStore.swift
Prism/Views/: ActiveTabView.swift  AddressBarView.swift  CompactTabBar.swift  CompactTabBarView.swift  CompactTabItem.swift  ContentView.swift  NewTabView.swift  PrivacyShieldView.swift  QuickLinkEditView.swift  SettingsView.swift  SidebarView.swift  TabBarView.swift  WebContentView.swift  WindowAccessor.swift
Prism/WebEngine/: ContentBlocker.swift
adblock-generator/: Cargo.toml  README.md  generate_rules.sh  main.rs  test_filters.txt
