[package]
name = "adblock-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
adblock = { version = "0.12", features = ["content-blocking"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "adblock-generator"
path = "main.rs"